force-app/main/default/objects/AM_Homologaciones_integracion__c/AM_Homologaciones_integracion__c.object-meta.xml
<CustomObject>
    <description>Homologaciones para integración con Sipres.</description>
    <label>Homologaciones integración</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Consecutivo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Homologaciones integración</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>