force-app/main/default/objects/AM_Homologaciones_integracion__c/fields/AM_Codigo_que_se_envia__c.field-meta.xml
<CustomField>
    <fullName>AM_Codigo_que_se_envia__c</fullName>
    <description>Código que se envía como homologación.</description>
    <label>Código que se envía</label>
    <length>200</length>
    <type>Text</type>
</CustomField>