force-app/main/default/objects/AM_Homologaciones_integracion__c/fields/AM_Codigo_que_se_recibe__c.field-meta.xml
<CustomField>
    <fullName>AM_Codigo_que_se_recibe__c</fullName>
    <description>Código que se va a recibir para realizar homologación.</description>
    <label>Código que se recibe</label>
    <length>200</length>
    <type>Text</type>
</CustomField>