force-app/main/default/objects/AM_Homologaciones_integracion__c/fields/AM_Nombre_Campo__c.field-meta.xml
<CustomField>
    <fullName>AM_Nombre_Campo__c</fullName>
    <description>Nombre API del campo que se va a homologar.</description>
    <label>Nombre Campo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>