force-app/main/default/objects/AM_Homologaciones_integracion__c/fields/AM_Objeto__c.field-meta.xml
<CustomField>
    <fullName>AM_Objeto__c</fullName>
    <description>Objeto del cual se homologa el campo.</description>
    <label>Objeto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>