force-app/main/default/objects/AM_Homologaciones_integracion__c/fields/AM_Sistema__c.field-meta.xml
<CustomField>
    <fullName>AM_Sistema__c</fullName>
    <description>Sistema con el cual se realiza la integración.</description>
    <label>Sistema</label>
    <length>50</length>
    <type>Text</type>
</CustomField>